plugins {
    id 'java'
    id 'xyz.jpenilla.run-paper' version '2.3.1'
    id 'com.gradleup.shadow' version '8.3.5'
}

group = 'com.blanoir'
version = '4.0.1'

repositories {
    mavenCentral()
    maven {
        name = 'papermc-repo'
        url = uri('https://repo.papermc.io/repository/maven-public/')
    }
    maven {
        url = uri('https://repo.extendedclip.com/releases/')
    }
}

dependencies {
    compileOnly files('libs/MythicMobs.jar')
    compileOnly 'io.papermc.paper:paper-api:26.2.build.+'
    compileOnly 'dev.aurelium:auraskills-api-bukkit:2.3.3'
    compileOnly 'me.clip:placeholderapi:2.11.7'
    compileOnly files('libs/AttributePlus.jar')
    compileOnly files('libs/BlancAttribute.jar')

    implementation 'redis.clients:jedis:5.2.0'
    implementation 'com.mysql:mysql-connector-j:9.6.0'
    implementation 'com.zaxxer:HikariCP:6.3.0'
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(25))
}
shadowJar {
    archiveFileName = "Accessory.jar"
    archiveClassifier.set("")
    mergeServiceFiles()
    exclude("META-INF/*.SF", "META-INF/*.DSA", "META-INF/*.RSA")
}
tasks {
    runServer {
        minecraftVersion('1.21.12')
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release.set(25)
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
}

processResources {
    def props = [version: version]
    inputs.properties props
    filteringCharset = 'UTF-8'
    filesMatching('paper-plugin.yml') {
        expand props
    }
}

// Offline-friendly behavioral verification against the actual configuration/event classes.
sourceSets {
    verification {
        compileClasspath = sourceSets.main.output + configurations.compileClasspath
        runtimeClasspath = output + compileClasspath
    }
}
tasks.register('verifyAccessory', JavaExec) {
    group = 'verification'
    description = 'Checks attribute selection, loader contexts and equipment event contracts.'
    dependsOn tasks.verificationClasses
    classpath = sourceSets.verification.runtimeClasspath
    mainClass = 'com.blanoir.accessory.verification.VerificationMain'
    javaLauncher = javaToolchains.launcherFor { languageVersion = JavaLanguageVersion.of(25) }
}
tasks.named('check') { dependsOn tasks.named('verifyAccessory') }
